# noaa-c-cap

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
docker/: Dockerfile-dev
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
example/: collection.json
example/conus_1975_ccap_landcover_20200311/: conus_1975_ccap_landcover_20200311.json
example/conus_2016_ccap_landcover_20200311/: conus_2016_ccap_landcover_20200311.json
example/hi_1992_mosaic_ccap_land_cover/: hi_1992_mosaic_ccap_land_cover.json
examples/: collection.json
examples/conus_1975_ccap_landcover_20200311/: conus_1975_ccap_landcover_20200311.json
examples/conus_1985_ccap_landcover_20200311/: conus_1985_ccap_landcover_20200311.json
examples/conus_1992_ccap_landcover_20201019/: conus_1992_ccap_landcover_20201019.json
examples/conus_1996_ccap_landcover_20200311/: conus_1996_ccap_landcover_20200311.json
examples/conus_2001_ccap_landcover_20200311/: conus_2001_ccap_landcover_20200311.json
examples/conus_2006_ccap_landcover_20200311/: conus_2006_ccap_landcover_20200311.json
examples/conus_2010_ccap_landcover_20200311/: conus_2010_ccap_landcover_20200311.json
scripts/: format  lint  test
tests/: __init__.py  test_commands.py  test_dataset.py  test_module.py  test_stac.py
tests/data-files/: 2010_puerto_rico_ccap.xml  CCAP_Parent_2010.xml  (+1 more)
(+13 files in other folders)
